upgraded quarkus to 3.1.1.Final